this is the initial commit

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1> Get ready for challenge! </h1>
+	<h2 id="game">Good Luck!</h2>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <br/>    
+    <br/>
+ 	<button onclick="restartGame()">Restart</button> 
+ 	<script> 
+		function restartGame() {
+    		location.reload();
+		}
+ 	</script>
+ 	<h2 id="game1"></h2>  
 </body>
 </html>
