made changes to readme file by adding more information. reviewed app.js code and incuded comments to it

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <br/>    
     <br/>
  	<button onclick="restartGame()">Restart</button> 
+<!-- this script renders a restart button to the page by which player can restart the game -->
  	<script> 
 		function restartGame() {
     		location.reload();
